--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-intersection-observer": "^9.8.1",
     "react-markdown": "^8.0.7",
     "react-reveal": "^1.2.2",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "remarkable": "^2.0.1",
     "web-vitals": "^2.1.4"
