--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "framer-motion": "^10.18.0",
-    "fs": "0.0.1-security",
     "markdown-it": "^13.0.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
@@ -22,11 +21,12 @@
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.8.1",
     "react-markdown": "^8.0.7",
-    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.3",
+    "react-zoom-pan-pinch": "^3.7.0",
     "remarkable": "^2.0.1",
-    "typescript": "3.2.1",
+    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,7 +39,10 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "react-hooks/exhaustive-deps": "off"
+    }
   },
   "browserslist": {
     "production": [
