--- a/package.json
+++ b/package.json
@@ -3,31 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@chakra-ui/icons": "^2.1.1",
-    "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@react-icons/all-files": "^4.1.0",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.6.8",
-    "bootstrap": "^5.3.3",
-    "framer-motion": "^10.18.0",
-    "markdown-it": "^13.0.2",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.10.2",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.12.0",
-    "react-intersection-observer": "^9.8.1",
-    "react-markdown": "^8.0.7",
-    "react-router-dom": "^6.22.3",
+    "@chakra-ui/icons": "2.1.1",
+    "@chakra-ui/react": "2.8.2",
+    "@emotion/react": "11.11.4",
+    "@emotion/styled": "11.11.5",
+    "@react-icons/all-files": "4.1.0",
+    "@testing-library/jest-dom": "5.17.0",
+    "@testing-library/react": "13.4.0",
+    "@testing-library/user-event": "13.5.0",
+    "axios": "1.6.8",
+    "bootstrap": "5.3.3",
+    "framer-motion": "10.18.0",
+    "markdown-it": "13.0.2",
+    "react": "18.2.0",
+    "react-bootstrap": "2.10.2",
+    "react-dom": "18.2.0",
+    "react-icons": "4.12.0",
+    "react-intersection-observer": "9.8.1",
+    "react-markdown": "8.0.7",
+    "react-router-dom": "6.22.3",
     "react-scripts": "5.0.1",
-    "react-scroll": "^1.9.3",
-    "react-zoom-pan-pinch": "^3.7.0",
-    "remarkable": "^2.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "react-scroll": "1.9.3",
+    "react-zoom-pan-pinch": "3.7.0",
+    "remarkable": "2.0.1",
+    "typescript": "4.9.5",
+    "web-vitals": "2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
